--- a/CCMS/Views/Home/AddDocumentstoTickets.cshtml
+++ b/CCMS/Views/Home/AddDocumentstoTickets.cshtml
@@ -277,7 +277,7 @@
                                                                         <td>20210409-ZP-03</td>
                                                                         <td>Closed</td>
                                                                         <td>2021-04-09 08:17:57</td>
-                                                                        <td>
+                                                                        <td style="text-align:center">
                                                                             <button type="button" style="margin:2px" class="btn btn-sm btn-success-custom" data-toggle="modal" data-target="#ViewTicketModal"><i class="fa fa-eye"></i>&nbsp;View</button>&nbsp;
                                                                         </td>
                                                                     </tr>
@@ -295,7 +295,7 @@
                                                                         <td>20210416_EL-12</td>
                                                                         <td>Closed</td>
                                                                         <td>2021-01-09 08:17:57</td>
-                                                                        <td>
+                                                                        <td style="text-align:center">
                                                                             <button type="button" style="margin:2px" class="btn btn-sm btn-success-custom" data-toggle="modal" data-target="#ViewTicketModal"><i class="fa fa-eye"></i>&nbsp;View</button>&nbsp;
                                                                         </td>
                                                                     </tr>
@@ -335,7 +335,7 @@
                                                                 <div class="card-header">
                                                                     <h4 class="card-title">Person Documents</h4>
                                                                 </div>
-                                                                <div class="card-body" style="height:420px!important">
+                                                                <div class="card-body" style="height:520px!important">
 
                                                                     <div class="row">
                                                                         <div class="col-12 col-lg-12 mb-3">
@@ -373,8 +373,8 @@
                                                                 <div class="card-header">
                                                                     <h4 class="card-title">Document View - {{DocumentName}}</h4>
                                                                 </div>
-                                                                <div class="card-body" style="height:420px!important">
-                                                                    <iframe src="~/Uploads/Inspection.pdf" width="100%" height="400px" ng-show="ShowIframe">
+                                                                <div class="card-body" style="height:520px!important">
+                                                                    <iframe src="~/Uploads/Inspection.pdf" width="100%" height="500px" ng-show="ShowIframe">
                                                                     </iframe>
                                                                 </div>
                                                             </div>
