--- a/CCMS/Views/Home/CAS_Roles.cshtml
+++ b/CCMS/Views/Home/CAS_Roles.cshtml
@@ -206,86 +206,104 @@
                         </tr>
                     </table>
                 </a>
+                
             </div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/log_outbond.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust Office</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/log_outbond.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust Office</div></td>
+                        </tr>
+                    </table>
+                    </a>
             </div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/add_lodge.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust MCP</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/add_lodge.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust MCP</div></td>
+                        </tr>
+                    </table>
+                    </a>
             </div>
         </div>
 
         <div class="row" style="margin:10px">
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/change_lodge.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust Claim Review</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/change_lodge.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust Claim Review</div></td>
+                        </tr>
+                    </table>
+                    </a>
 
 
             </div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/viewLodge.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust Call center</div></td>
-                    </tr>
-                </table>
-            </div>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/viewLodge.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust Call center</div></td>
+                        </tr>
+                    </table>
+                    </a>
+</div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/upload_documents.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust Pre Claim Prepare</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/upload_documents.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust Pre Claim Prepare</div></td>
+                        </tr>
+                    </table>
+                    </a>
             </div>
         </div>
 
         <div class="row" style="margin:10px">
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/BME_booking.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Agent</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/BME_booking.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Agent</div></td>
+                        </tr>
+                    </table>
+                    </a>
 
 
             </div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/query_person.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust MCP Prepare</div></td>
-                    </tr>
-                </table>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/query_person.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust MCP Prepare</div></td>
+                        </tr>
+                    </table>
+                    </a>
             </div>
             <div class="col-md-4">
-                <table>
-                    <tr>
-                        <td> <div class=""> <img src="~/Content/assets/icons/BME_booking.png" class="roundedB" /></div></td>
-                        <td> <div class="km">Tshiamiso Trust TCC Prepare</div></td>
-                    </tr>
-                </table>
-            </div>
+                <a href="../home/dashboard">
+                    <table>
+                        <tr>
+                            <td> <div class=""> <img src="~/Content/assets/icons/BME_booking.png" class="roundedB" /></div></td>
+                            <td> <div class="km">Tshiamiso Trust TCC Prepare</div></td>
+                        </tr>
+                    </table>
+                    </a>
+</div>
         </div>
 
        
           
-            <div class="row" style="margin:10px">
+        <div class="row" style="margin:10px">
+            <a href="../home/dashboard">
                 <div class="col-md-4">
                     <table>
                         <tr>
@@ -293,10 +311,11 @@
                             <td> <div class="km">Tshiamiso Trust A2D24</div></td>
                         </tr>
                     </table>
+                    </a>
 
 
                 </div>
-            </div>
+        </div>
        
 
 
