--- a/CCMS/Views/Home/DeceasedRegister.cshtml
+++ b/CCMS/Views/Home/DeceasedRegister.cshtml
@@ -868,7 +868,7 @@
 
                                                                                             <tr>
                                                                                                 <td style="width:85%">Death Certificate</td>
-                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
+                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom float-right" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
                                                                                             </tr>
 
                                                                                         </tbody>
@@ -887,11 +887,11 @@
 
                                                                                             <tr>
                                                                                                 <td style="width:85%">Adoption Proof </td>
-                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
+                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom float-right" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td style="width:85%">Attorney Documentation </td>
-                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
+                                                                                                <td style="width:15%"><a class="btn btn-sm btn-success-custom float-right" href="#" ng-click="showDocument()"><i class="fa fa-eye"></i>&nbsp;View</a></td>
                                                                                             </tr>
                                                                                         </tbody>
                                                                                     </table>
@@ -925,12 +925,12 @@
                                                             </div>
                                                             <div class="col-12 col-lg-4">
 
-                                                                <button type="button" style="width:100px!important" class="btn btn-sm btn-success-custom" ng-click="IsSaving?'':SaveReceiveInBondCall()">
+                                                                <button type="button" style="width:100px!important" class="btn btn-sm btn-success-custom layout-align-center" ng-click="IsSaving?'':SaveReceiveInBondCall()">
                                                                     <i ng-if="!IsSaving" class="fa fa-save"></i>&nbsp; <i ng-if="IsSaving" class="fa fa-spin fa-spinner"></i>&nbsp;Save
                                                                 </button>&nbsp;
                                                             </div>
-                                                            <div class="col-12 col-lg-4">
-                                                                <button type="button" class="btn btn-sm btn-success-custom" ng-click="SearchDetailsPerson()" style="width:100px!important"><i class="fa fa-forward"></i>&nbsp;Next</button>
+                                                            <div class="col-12 col-lg-4 ">
+                                                                <button type="button" class="btn btn-sm btn-success-custom float-right" ng-click="SearchDetailsPerson()" style="width:100px!important"><i class="fa fa-forward"></i>&nbsp;Next</button>
                                                                 &nbsp;
 
                                                             </div>
